# gcloud-logs-mcp-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: auth.rs  config.rs  logging.rs  main.rs
src/mcp/: tools.rs
